--- a/portfolio/src/styles/partials/_singlebase.scss
+++ b/portfolio/src/styles/partials/_singlebase.scss
@@ -132,7 +132,7 @@
   }
   svg {
     position: relative;
-    top: 0;
+    top: 2px;
     margin-left: 10px;
     padding-bottom: 5px;
     fill: none;
